force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/ETT_Job_Card_Close_Lines__c.object-meta.xml
<CustomObject>
    <label>Job Card Close Lines</label>
    <nameField>
        <displayFormat>JCCL-{00000}</displayFormat>
        <label>Job Card Close Lines</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Card Close Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>