force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>