force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/ETT_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>ETT_Item_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>