force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/ETT_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unique_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>