force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Factory_Stock__c.field-meta.xml
<CustomField>
    <fullName>Factory_Stock__c</fullName>
    <label>Factory  Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>