force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Issued_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_Quantity__c</fullName>
    <label>Issued Quantity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>