force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tools &amp; Material Name</description>
    <label>Item Name</label>
    <referenceTo>ETT_Tools_Master__c</referenceTo>
    <relationshipLabel>Job Card Close Lines</relationshipLabel>
    <relationshipName>Job_Card_Close_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>