force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Job_Card_Close__c.field-meta.xml
<CustomField>
    <fullName>Job_Card_Close__c</fullName>
    <label>Job Card Close</label>
    <referenceTo>ETT_Job_Card_Close__c</referenceTo>
    <relationshipLabel>Job Card Close Lines</relationshipLabel>
    <relationshipName>Job_Card_Close_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>