force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/Material_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Total_Cost__c</fullName>
    <description>Calculate  from individual Unit Value from tool master  and setting in unit cost then multiple by issues quantity</description>
    <formula>Issued_Quantity__c * Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material  Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>