force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>