force-app/main/default/objects/ETT_Job_Card_Close_Lines__c/listViews/Job_Card_close_Lines.listView-meta.xml
<ListView>
    <fullName>Job_Card_close_Lines</fullName>
    <columns>Job_Card_Close__c</columns>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Factory_Stock__c</columns>
    <columns>Issued_Quantity__c</columns>
    <columns>ETT_Item_Description__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>UOM__c</columns>
    <columns>Cost__c</columns>
    <columns>ETT_Unique_Code__c</columns>
    <columns>Job_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Job Card  close Lines</label>
</ListView>